--- a/src/main/resources/com/client/fxml/schedule.fxml
+++ b/src/main/resources/com/client/fxml/schedule.fxml
@@ -18,7 +18,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane id="mainPane" maxHeight="2160.0" maxWidth="3840.0" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/schedule.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.ScheduleController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
@@ -50,9 +49,14 @@
             <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="60.0" GridPane.halignment="RIGHT">
                <children>
                   <Button id="exitButton" fx:id="addReservationButton" minHeight="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#addReservation" prefHeight="60.0" prefWidth="60.0" />
-                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="addRes" fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../img/addRes.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="addResExit" fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" visible="false">
+                     <image>
+                        <Image url="@../img/addResExit.png" />
                      </image>
                   </ImageView>
                </children>
@@ -125,7 +129,7 @@
                 <TableColumn fx:id="roomIdColumn" editable="false" prefWidth="75.0" sortable="false" text="Numer" />
                 <TableColumn fx:id="roomLevelColumn" editable="false" prefWidth="75.0" sortable="false" text="Piętro" />
                   <TableColumn fx:id="roomCapColumn" editable="false" prefWidth="75.0" sortable="false" text="Pojemność" />
-                  <TableColumn fx:id="roomTypeColumn" editable="false" maxWidth="300.0" prefWidth="217.0" sortable="false" text="Typ" />
+                  <TableColumn fx:id="roomTypeColumn" editable="false" maxWidth="300.0" prefWidth="215.0" sortable="false" text="Typ" />
               </columns>
                <GridPane.margin>
                   <Insets left="60.0" right="10.0" />
