--- a/src/main/resources/com/client/fxml/homeSubPanes/homeRooms.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeRooms.fxml
@@ -1,25 +1,163 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeRoomsController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <Label text="rooms test" GridPane.rowIndex="1" />
-      <Button fx:id="testButton" mnemonicParsing="false" onAction="#testAction" text="test" />
-      <TextField fx:id="testText" GridPane.columnIndex="1" />
-   </children>
+<GridPane prefHeight="640.0" prefWidth="1280.0" stylesheets="@../../css/homeRooms.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeRoomsController">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+        <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" percentHeight="5.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" percentHeight="8.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" percentHeight="14.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" percentHeight="4.0" vgrow="SOMETIMES" />
+        <RowConstraints percentHeight="7.0" vgrow="SOMETIMES" />
+        <RowConstraints percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints percentHeight="5.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <children>
+        <Pane id="leftPane" mouseTransparent="true" GridPane.rowSpan="2147483647" />
+        <TableView fx:id="table" prefWidth="200.0" GridPane.rowIndex="2" GridPane.rowSpan="2147483647">
+            <columns>
+                <TableColumn fx:id="roomIdColumn" maxWidth="-1.0" minWidth="50.0" prefWidth="50.0" text="Nr" />
+                <TableColumn fx:id="roomLevelColumn" maxWidth="-1.0" minWidth="75.0" prefWidth="75.0" text="Piętro" />
+                <TableColumn fx:id="roomCapColumn" maxWidth="-1.0" minWidth="75.0" prefWidth="75.0" text="Pojemność" />
+                <TableColumn fx:id="roomTypeColumn" maxWidth="-1.0" minWidth="270.0" prefWidth="270.0" text="Typ" />
+            </columns>
+            <GridPane.margin>
+                <Insets bottom="20.0" left="20.0" right="20.0" />
+            </GridPane.margin>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+        </TableView>
+        <Label id="personLabel" fx:id="heading" text="Wybierz pokój z listy" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+        <Label id="mainLabel" prefHeight="50.0" text="Pokoje" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <GridPane.margin>
+                <Insets top="10.0" />
+            </GridPane.margin>
+        </Label>
+        <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="32.0" prefWidth="386.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <children>
+                <TextField fx:id="searchFilter" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="32.0" prefWidth="240.0" promptText="Filter" styleClass="textField" />
+                <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
+                    <children>
+                        <Button focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#resetFilter" prefHeight="32.0" prefWidth="32.0" styleClass="resetButton" />
+                        <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../img/rubber.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                    <HBox.margin>
+                        <Insets left="10.0" />
+                    </HBox.margin>
+                </Pane>
+                <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
+                    <children>
+                        <Button fx:id="refreshButton" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#refresh" prefHeight="32.0" prefWidth="32.0" styleClass="resetButton" />
+                        <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="4.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../img/refresh.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                    <HBox.margin>
+                        <Insets left="20.0" />
+                    </HBox.margin>
+                </Pane>
+                <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
+                    <children>
+                        <Button fx:id="delRoomButton" disable="true" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#delEmployee" prefHeight="32.0" prefWidth="32.0" styleClass="resetButton" />
+                        <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../img/delEmp.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                    <HBox.margin>
+                        <Insets left="20.0" />
+                    </HBox.margin>
+                </Pane>
+            </children>
+        </HBox>
+        <Label fx:id="cap" alignment="CENTER" contentDisplay="CENTER" minHeight="30.0" minWidth="32.0" prefWidth="200.0" styleClass="infoField" text="-" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
+        <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="48.0" prefWidth="48.0" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+            <children>
+                <Button fx:id="scheduleButton" focusTraversable="false" minHeight="48.0" minWidth="48.0" mnemonicParsing="false" onAction="#schedule" prefHeight="48.0" prefWidth="48.0" styleClass="resetButton" />
+                <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="8.0" layoutY="8.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../../img/tomorrow.png" />
+                    </image>
+                </ImageView>
+            </children>
+        </Pane>
+        <Label fx:id="roomId" alignment="BOTTOM_CENTER" contentDisplay="BOTTOM" prefWidth="200.0" styleClass="infoField" text="-" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
+        <Label fx:id="level" alignment="CENTER" contentDisplay="CENTER" prefWidth="200.0" styleClass="infoField" text="-" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
+        <Label id="scheduleLabel" alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Plan:" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+        <Pane id="infoPane2" prefHeight="200.0" prefWidth="200.0" style="-fx-view-order: 7;" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="6" GridPane.rowSpan="2147483647">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" />
+            </GridPane.margin>
+        </Pane>
+        <Label alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Poniedziałek" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+        <Label alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Wtorek" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+        <Label alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Środa" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+        <Label alignment="CENTER" prefWidth="200.0" styleClass="infoField" text="Czwartek" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+        <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="200.0" styleClass="infoField" text="Piątek" GridPane.columnIndex="5" GridPane.rowIndex="7" />
+        <Pane id="infoPane" mouseTransparent="true" style="-fx-view-order: 8;" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="6" GridPane.valignment="CENTER" />
+        <Label fx:id="monday" alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="-" GridPane.columnIndex="1" GridPane.rowIndex="8">
+            <padding>
+                <Insets left="10.0" />
+            </padding>
+        </Label>
+        <Label fx:id="tuesday" alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="-" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+        <Label fx:id="wednesday" alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="-" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+        <Label fx:id="thursday" alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="-" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+        <Label fx:id="friday" alignment="CENTER" prefHeight="400.0" prefWidth="200.0" styleClass="scheArea" text="-" GridPane.columnIndex="5" GridPane.rowIndex="8">
+            <padding>
+                <Insets right="10.0" />
+            </padding>
+        </Label>
+        <Pane id="dayHighlightPane" prefHeight="200.0" prefWidth="200.0" style="-fx-view-order: 6;" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="7">
+            <GridPane.margin>
+                <Insets left="10.0" right="10.0" />
+            </GridPane.margin>
+        </Pane>
+      <Label styleClass="infoField" text="Pojemność" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="infoField" text="Piętro" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="infoField" text="Nr pokoju" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+         <GridPane.margin>
+            <Insets top="10.0" />
+         </GridPane.margin>
+      </Label>
+    </children>
 </GridPane>
