--- a/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeEmp.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <GridPane prefHeight="640.0" prefWidth="1280.0" stylesheets="@../../css/homeEmp.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeEmpController">
     <columnConstraints>
@@ -161,5 +162,10 @@
             <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </Pane>
+      <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefWidth="500.0" text="Label" textFill="#ff0909" visible="false" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
    </children>
 </GridPane>
