--- a/src/main/resources/com/client/fxml/homeSubPanes/homeRooms.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeRooms.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <GridPane prefHeight="640.0" prefWidth="1280.0" stylesheets="@../../css/homeRooms.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeRoomsController">
     <columnConstraints>
@@ -88,10 +89,10 @@
                 </Pane>
                 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="32.0" prefWidth="32.0">
                     <children>
-                        <Button fx:id="delRoomButton" disable="true" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#delEmployee" prefHeight="32.0" prefWidth="32.0" styleClass="resetButton" />
+                        <Button fx:id="delRoomButton" disable="true" focusTraversable="false" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#delRoom" prefHeight="32.0" prefWidth="32.0" styleClass="resetButton" />
                         <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="3.0" layoutY="3.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../img/delEmp.png" />
+                                <Image url="@../../img/delRoom.png" />
                             </image>
                         </ImageView>
                     </children>
@@ -158,6 +159,11 @@
          <GridPane.margin>
             <Insets top="10.0" />
          </GridPane.margin>
+      </Label>
+      <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefWidth="500.0" text="Label" textFill="#ff0909" visible="false" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+         <font>
+            <Font size="25.0" />
+         </font>
       </Label>
     </children>
 </GridPane>
