--- a/src/main/resources/com/client/css/homeWelcome.css
+++ b/src/main/resources/com/client/css/homeWelcome.css
@@ -16,6 +16,11 @@
     -fx-font-size: 26px;
     -fx-text-fill: white;
 }
+.field3 {
+     -fx-font-family: 'Lato';
+    -fx-font-size: 22px;
+    -fx-text-fill: white;
+}
 #scheduleLabel {
     -fx-font-family: 'Lato';
     -fx-font-size: 18px;
@@ -26,4 +31,9 @@
     -fx-background-radius: 10;
     -fx-border-color: #c6c6c6;
     -fx-border-radius: 10;
+}
+.topButton {
+    -fx-background-color:  linear-gradient(to bottom, #fdfdfd, #c0c0c0);
+    -fx-background-radius: 8;
+    -fx-border-color: transparent;
 }
