--- a/src/main/resources/com/client/fxml/homeSubPanes/homeWelcome.fxml
+++ b/src/main/resources/com/client/fxml/homeSubPanes/homeWelcome.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane  prefHeight="640.0" prefWidth="1280.0" stylesheets="@../../css/homeWelcome.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeWelcomeController">
+<GridPane prefHeight="640.0" prefWidth="1280.0" stylesheets="@../../css/homeWelcome.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.client.controllers.HomeWelcomeController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -21,12 +24,15 @@
     <RowConstraints minHeight="10.0" percentHeight="15.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" percentHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Label fx:id="welcomeLabel" alignment="CENTER" prefHeight="300.0" prefWidth="300.0" styleClass="field" text="Witaj" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       <Pane id="leftPane" prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="2147483647" />
-      <Label id="mainLabel" alignment="CENTER" prefHeight="300.0" prefWidth="300.0" text="Wprowadzenie" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+      <Label id="mainLabel" alignment="CENTER" prefHeight="300.0" prefWidth="300.0" text="Wprowadzenie" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
       <Pane id="infoPane" prefHeight="200.0" prefWidth="200.0" style="-fx-view-order: 8;" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2147483647">
          <GridPane.margin>
             <Insets bottom="15.0" />
@@ -37,6 +43,78 @@
             <Insets top="20.0" />
          </GridPane.margin>
       </Label>
-      <Label fx:id="schedule" text="Label" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+      <Label fx:id="schedule" text="Label" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.rowSpan="3" />
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="60.0" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+         <children>
+            <Button focusTraversable="false" minHeight="60.0" minWidth="60.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" styleClass="topButton" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../img/room.png" />
+               </image>
+            </ImageView>
+         </children>
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+      </Pane>
+      <Label styleClass="field3" text="Umożliwia podgląd pomieszczeń oraz &#10;ich tygodniowego planu." GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets left="90.0" />
+         </GridPane.margin>
+      </Label>
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="60.0" GridPane.rowIndex="4">
+         <children>
+            <Button focusTraversable="false" minHeight="60.0" minWidth="60.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" styleClass="topButton" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../img/emp.png" />
+               </image>
+            </ImageView>
+         </children>
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+      </Pane>
+      <Label styleClass="field3" text="Umożliwia podgląd pracowników oraz &#10;ich tygodniowego planu." GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets left="90.0" />
+         </GridPane.margin>
+      </Label>
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="60.0" GridPane.rowIndex="5">
+         <children>
+            <Button focusTraversable="false" minHeight="60.0" minWidth="60.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" styleClass="topButton" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../img/tomorrow.png" />
+               </image>
+            </ImageView>
+         </children>
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+      </Pane>
+      <Label styleClass="field3" text="Wyświetla tygodniowy plan&#10;wybranego pomieszczenia lub pracownika." GridPane.rowIndex="5">
+         <GridPane.margin>
+            <Insets left="90.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="field3" text="Niektóre funkcję są niedostępne dla&#10;osób bez uprawnień." GridPane.halignment="LEFT" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+         <GridPane.margin>
+            <Insets left="90.0" />
+         </GridPane.margin>
+      </Label>
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="60.0" prefWidth="60.0" GridPane.rowIndex="6">
+         <children>
+            <Button disable="true" focusTraversable="false" minHeight="60.0" minWidth="60.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" styleClass="topButton" />
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="5.0" layoutY="5.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../img/addRoom.png" />
+               </image>
+            </ImageView>
+         </children>
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin>
+      </Pane>
    </children>
 </GridPane>
